# MAI_OOP

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
lab1/: CMakeLists.txt  main.cpp
lab1/include/: lab1.h
lab1/src/: lab1.cpp
lab1/test/: tests01.cpp
